# mee-deepreefmap

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  segmentation_net.pth  sfm_net.pth
.github/workflows/: publish-container.yml
example_inputs/: class_to_color.json  class_to_label.json  intrinsics.json  intrinsics_eucm.json
example_inputs/transect_single_video_gopro/: single_video.sh
example_inputs/transect_single_video_other_camera/: single_video.sh
example_inputs/transect_two_videos_gopro/: two_video.sh
src/: reconstruct.py  reconstruction_utils.py  video_utils.py
src/segmentation/: model.py  train_segmentation_model.py  utils.py
src/sfm/: custom_transforms.py  datasets.py  inverse_warp.py  loss_functions.py  model.py  train_sfm.py  utils.py
